--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.0.1",
   "main": "index.js",
   "scripts": {
+    "test": "cross-env NODE_ENV=testing jest --verbose --runInBand --silent",
     "start": "node index.js",
     "server": "nodemon index.js",
     "migrate": "knex migrate:latest",
     "rollback": "knex migrate:rollback",
-    "test": "cross-env NODE_ENV=testing jest --verbose --runInBand --silent"
+    "up": "knex migrate:up",
+    "down": "knex migrate:down",
+    "seed": "knex seed:run"
   },
   "repository": {
     "type": "git",
@@ -18,14 +21,14 @@
     "cross-env": "7.0.3",
     "eslint": "8.4.1",
     "jest": "27.4.3",
-    "knex": "^0.95.15",
     "knex-cleaner": "^1.3.1",
+    "nodemon": "^2.0.15",
     "supertest": "6.1.6"
   },
   "dependencies": {
-    "-": "^0.0.1",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "nodemon": "^2.0.15",
+    "knex": "^0.95.15",
     "sqlite3": "^5.0.2"
   }
 }
